MFH: Fixed Bug #36872 (session_destroy() fails after call to session_regenerate_id(true)).